--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ a:visited {
 }
 
 .navigation {
-    max-height: 80px;
+    max-height: 65px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -58,11 +58,25 @@ a:visited {
 
 .navigation__item--center--today {
     margin-right: 40px;
+    box-shadow: inset 0px 1px 0px 0px #ffffff;
+    background-color: transparent;
+    border-radius: 4px;
+    border: 1px solid #dcdcdc;
+    padding: 8px 20px;
+    text-decoration: none;
+    font: inherit;
+    cursor: pointer;
 }
 
-.navigation__item--center--arrow-left,
-.navigation__item--center--arrow-right {
+.navigation__item--center--arrow--left,
+.navigation__item--center--arrow--right {
     margin-right: 10px;
+}
+
+.navigation__item--center--arrow--left:hover,
+.navigation__item--arrow--right:hover {
+    border-radius: 50%;
+    background-color: rgb(241, 241, 241);
 }
 
 .navigation__item--center--month {
@@ -74,4 +88,105 @@ a:visited {
 
 .navigation__item--right--layout {
     margin-left: auto;
+    box-shadow: inset 0px 1px 0px 0px #ffffff;
+    background-color: transparent;
+    border-radius: 4px;
+    border: 1px solid #dcdcdc;
+    padding: 8px 20px;
+    text-decoration: none;
+    font: inherit;
+    cursor: pointer;
+}
+
+.navigation__item--center--today:hover,
+.navigation__item--right--layout:hover,
+.button--create:hover {
+    background-color: rgb(241, 241, 241);
+}
+
+.main {
+    display: flex;
+}
+
+.sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.button--create {
+    margin: 20px;
+    box-shadow: 0px 1px 2px 0px #b8b7b7;
+    background-color: transparent;
+    border-radius: 20px;
+    border: 1px solid #dcdcdc;
+    padding: 12px 24px;
+    text-decoration: none;
+    cursor: pointer;
+    font: inherit;
+}
+
+.main li {
+    list-style-type: none;
+}
+
+.calendar {
+    margin-left: 15px;
+    height: 228px;
+    width: 215px;
+    padding: 15px;
+}
+
+.calendar__header {
+    display: flex;
+    flex-direction: row;
+}
+
+.calendar__date {
+    white-space: nowrap;
+    font-size: 16px;
+    padding-left: 10px;
+}
+
+.calendar__arrows {
+    display: flex;
+    padding-left: 90px;
+}
+
+.calendar__arrow--left:hover,
+.calendar__arrow--right:hover {
+    border-radius: 50%;
+    background-color: rgb(241, 241, 241);
+}
+
+.calendar__weekdays {
+    font-size: 12px;
+    margin-top: 0;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    padding-left: 0;
+    color: grey;
+    justify-items: center;
+}
+
+.calendar__monthdays {
+    font-size: 12px;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    padding-left: 0;
+    grid-column-gap: 0px;
+    grid-row-gap: 10px;
+    justify-items: center;
+}
+
+.grid {}
+
+.grid__header {}
+
+.grid__header__weekdays {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(1, 1fr);
 }
