--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ a:visited {
 .grid__header__monthdays li {
     width: 100%;
     text-align: center;
-    border-width: 0px 1px 0px 1px;
+    border-width: 0px 1px 1px 1px;
     border-image: linear-gradient(white 60%, lightgrey 40%) 1;
     border-style: solid;
     border-right: none;
@@ -249,6 +249,7 @@ a:visited {
 }
 
 .events__main {
+    position: relative;
     width: 100%;
     height: 100%;
     display: grid;
@@ -266,8 +267,9 @@ a:visited {
 
 .sidebar__gmt {
     position: absolute;
+    width: 55px;
     top: 118px;
-    left: 248px;
+    left: 240px;
     font-size: 12px;
     color: grey;
     background-color: white;
@@ -293,6 +295,16 @@ a:visited {
     border: 1px solid lightgrey;
     border-bottom: none;
     border-right: none;
+}
+
+.event__element {
+    color: white;
+    font-size: 10px;
+    border-radius: 3px;
+}
+
+.events__item:nth-child(-n+7) {
+    border-top: none;
 }
 
 .sidebar__time li {
@@ -358,7 +370,8 @@ a:visited {
     margin-top: 10px;
 }
 
-input[type="datetime-local"],
+.datetime--start,
+.datetime--end,
 textarea::placeholder {
     font-family: ProductSans, sans-serif;
 }
@@ -380,11 +393,18 @@ textarea::placeholder {
     margin-bottom: 5px;
 }
 
-.event-creation-modal__footer button {
+.event-creation-modal__footer--delete,
+.event-creation-modal__footer--save {
     background-color: #1A73E9;
     border-radius: 6px;
     border: 1px solid #337fed;
     padding: 10px 24px;
     color: white;
     margin-left: 10px;
+    cursor: pointer;
+}
+
+.event-creation-modal__footer--delete:active,
+.event-creation-modal__footer--save:active {
+    background-color: #1a64c5;
 }
